# cliniq-agent

./: .env.example  .gitignore  JOURNAL.md  README.md  conftest.py  main.py  pyproject.toml
agent/: graph.py  hello.py  mcp_client.py  state.py
agent/nodes/: indexer.py  planner.py  reader.py  reflector.py  retriever.py  synthesizer.py
evals/harness/: metrics.py  runner.py  scorer.py
evals/questions/: seed.json
evals/results/: run-20260712T021309.jsonl
mcp_server/: server.py
mcp_server/tools/: corpus.py  pubmed.py
scripts/: _bootstrap.py  diagnose.py  run_eval.py  try_corpus.py  try_fetch.py  try_graph.py  try_pubmed.py
src/agent/: hello.py
src/mcp_server/: server.py
tests/: test_corpus.py  test_metrics.py  test_pubmed.py
ui/: app.py
ui/static/: index.html
