[project]
name = "cliniq-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "mcp>=1.28.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "agent"]
